; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-device/extr_test-udev-device-thread.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-device/extr_test-udev-device-thread.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.udev_device = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"SYSTEMD_MEMPOOL\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"/sys/class/net/lo\00", align 1
@thread = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.udev_device*, align 8
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = call i64 @unsetenv(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %9 = icmp eq i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert_se(i32 %10)
  %12 = call %struct.udev_device* @udev_device_new_from_syspath(i32* null, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  store %struct.udev_device* %12, %struct.udev_device** %6, align 8
  %13 = ptrtoint %struct.udev_device* %12 to i32
  %14 = call i32 @assert_se(i32 %13)
  %15 = load %struct.udev_device*, %struct.udev_device** %6, align 8
  %16 = call i32 @udev_device_get_properties_list_entry(%struct.udev_device* %15)
  %17 = call i32 @assert_se(i32 %16)
  %18 = load i32, i32* @thread, align 4
  %19 = call i64 @pthread_create(i32* %7, i32* null, i32 %18, %struct.udev_device** %6)
  %20 = icmp eq i64 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert_se(i32 %21)
  %23 = load i32, i32* %7, align 4
  %24 = call i64 @pthread_join(i32 %23, i32* null)
  %25 = icmp eq i64 %24, 0
  %26 = zext i1 %25 to i32
  %27 = call i32 @assert_se(i32 %26)
  %28 = load %struct.udev_device*, %struct.udev_device** %6, align 8
  %29 = icmp ne %struct.udev_device* %28, null
  %30 = xor i1 %29, true
  %31 = zext i1 %30 to i32
  %32 = call i32 @assert_se(i32 %31)
  ret i32 0
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @unsetenv(i8*) #1

declare dso_local %struct.udev_device* @udev_device_new_from_syspath(i32*, i8*) #1

declare dso_local i32 @udev_device_get_properties_list_entry(%struct.udev_device*) #1

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i32, %struct.udev_device**) #1

declare dso_local i64 @pthread_join(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
